experiment: drop porgressReporter. We suspect directExecutor might interfere with submission